// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp Modal renders correctly 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-16c3j3g-Modal"
      >
        <header
          className="css-14sl779-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            auth__sign_up_now_alt
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1gs9x9w-Modal"
        >
          <div
            className="css-eupbp4-SignUpForm"
          >
            <div
              className="css-13s2sfk-Heading"
            >
              auth__user_information
            </div>
            <div>
              <div
                className="css-1eksi13-Paper"
              >
                <div
                  className="css-1p9qd62-Text"
                >
                  auth__user_information_help_text
                </div>
                <div
                  className="css-1fmj57r"
                  data-testid="custom-select"
                >
                  <div
                    className="css-0"
                  >
                    <div
                      className="css-13s2sfk-Heading"
                    >
                      auth__salutation_label
                    </div>
                  </div>
                  <div
                    className="css-18vooac"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="custom-select css-b62m3t-container"
                      onKeyDown={[Function]}
                    >
                      <span
                        className="css-1f43avz-a11yText-A11yText"
                        id="react-select-2-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        className="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        className=" css-1l51fcv-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className=" css-1fdsijx-ValueContainer"
                        >
                          <div
                            className="single-value css-1ry7giw-singleValue"
                          >
                            mrs
                          </div>
                          <input
                            aria-autocomplete="list"
                            aria-expanded={false}
                            aria-haspopup={true}
                            aria-readonly={true}
                            className="css-mohuvp-dummyInput-DummyInput"
                            disabled={false}
                            id="react-select-2-input"
                            inputMode="none"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            role="combobox"
                            tabIndex={0}
                            value=""
                          />
                        </div>
                        <div
                          className=" css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            className=" css-1uei4ir-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            className=" css-1xc3v61-indicatorContainer"
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                          >
                            <div
                              className="css-l0jg45-Icon"
                              dangerouslySetInnerHTML={
                                {
                                  "__html": {},
                                }
                              }
                            />
                          </div>
                        </div>
                      </div>
                      <input
                        name="salutation"
                        type="hidden"
                        value="Mrs"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="css-1cky3ub-Columns"
                >
                  <div
                    className="css-1oiyj7r-Column"
                  >
                    <div
                      className="css-jdxnts"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-13s2sfk-Heading"
                      >
                        first_name
                      </div>
                      <div
                        className="css-1rjy8ih"
                      >
                        <input
                          className="css-pkbj54"
                          defaultValue=""
                          disabled={false}
                          name="firstName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="first_name"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="css-1oiyj7r-Column"
                  >
                    <div
                      className="css-jdxnts"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-13s2sfk-Heading"
                      >
                        last_name
                      </div>
                      <div
                        className="css-1rjy8ih"
                      >
                        <input
                          className="css-pkbj54"
                          defaultValue=""
                          disabled={false}
                          name="lastName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="last_name"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1jw15wx-SignUpForm"
            >
              <div
                className="css-13s2sfk-Heading"
              >
                auth__user_signup_data
              </div>
              <div>
                <div
                  className="css-1eksi13-Paper"
                >
                  <div
                    className="css-jdxnts"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-13s2sfk-Heading"
                    >
                      email
                    </div>
                    <div
                      className="css-1rjy8ih"
                    >
                      <input
                        className="css-pkbj54"
                        defaultValue=""
                        disabled={false}
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="email"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    className="css-1cky3ub-Columns"
                  >
                    <div
                      className="css-1oiyj7r-Column"
                    >
                      <div
                        className="css-jdxnts"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="css-13s2sfk-Heading"
                        >
                          password
                        </div>
                        <div
                          className="css-1rjy8ih"
                        >
                          <input
                            className="css-pkbj54"
                            defaultValue=""
                            disabled={false}
                            name="password"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="password"
                            type="password"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-1oiyj7r-Column"
                    >
                      <div
                        className="css-jdxnts"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="css-13s2sfk-Heading"
                        >
                          password_repeat
                        </div>
                        <div
                          className="css-1rjy8ih"
                        >
                          <input
                            className="css-pkbj54"
                            defaultValue=""
                            disabled={false}
                            name="password_repeat"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="password_repeat"
                            type="password"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-ukdqb3-Modal"
        >
          <button
            className="cancel-button css-a1i4d5-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              confirm_button
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignUp Modal renders correctly loading 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-16c3j3g-Modal"
      >
        <header
          className="css-14sl779-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            auth__sign_up_now_alt
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1gs9x9w-Modal"
        >
          <div
            className="css-eupbp4-SignUpForm"
          >
            <div
              className="css-13s2sfk-Heading"
            >
              auth__user_information
            </div>
            <div>
              <div
                className="css-1eksi13-Paper"
              >
                <div
                  className="css-1p9qd62-Text"
                >
                  auth__user_information_help_text
                </div>
                <div
                  className="css-1fmj57r"
                  data-testid="custom-select"
                >
                  <div
                    className="css-0"
                  >
                    <div
                      className="css-13s2sfk-Heading"
                    >
                      auth__salutation_label
                    </div>
                  </div>
                  <div
                    className="css-18vooac"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="custom-select css-b62m3t-container"
                      onKeyDown={[Function]}
                    >
                      <span
                        className="css-1f43avz-a11yText-A11yText"
                        id="react-select-3-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        className="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        className=" css-1l51fcv-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className=" css-1fdsijx-ValueContainer"
                        >
                          <div
                            className="single-value css-1ry7giw-singleValue"
                          >
                            mrs
                          </div>
                          <input
                            aria-autocomplete="list"
                            aria-expanded={false}
                            aria-haspopup={true}
                            aria-readonly={true}
                            className="css-mohuvp-dummyInput-DummyInput"
                            disabled={false}
                            id="react-select-3-input"
                            inputMode="none"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            role="combobox"
                            tabIndex={0}
                            value=""
                          />
                        </div>
                        <div
                          className=" css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            className=" css-1uei4ir-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            className=" css-1xc3v61-indicatorContainer"
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                          >
                            <div
                              className="css-l0jg45-Icon"
                              dangerouslySetInnerHTML={
                                {
                                  "__html": {},
                                }
                              }
                            />
                          </div>
                        </div>
                      </div>
                      <input
                        name="salutation"
                        type="hidden"
                        value="Mrs"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="css-1cky3ub-Columns"
                >
                  <div
                    className="css-1oiyj7r-Column"
                  >
                    <div
                      className="css-jdxnts"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-13s2sfk-Heading"
                      >
                        first_name
                      </div>
                      <div
                        className="css-1rjy8ih"
                      >
                        <input
                          className="css-pkbj54"
                          defaultValue=""
                          disabled={false}
                          name="firstName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="first_name"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="css-1oiyj7r-Column"
                  >
                    <div
                      className="css-jdxnts"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-13s2sfk-Heading"
                      >
                        last_name
                      </div>
                      <div
                        className="css-1rjy8ih"
                      >
                        <input
                          className="css-pkbj54"
                          defaultValue=""
                          disabled={false}
                          name="lastName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="last_name"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1jw15wx-SignUpForm"
            >
              <div
                className="css-13s2sfk-Heading"
              >
                auth__user_signup_data
              </div>
              <div>
                <div
                  className="css-1eksi13-Paper"
                >
                  <div
                    className="css-jdxnts"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-13s2sfk-Heading"
                    >
                      email
                    </div>
                    <div
                      className="css-1rjy8ih"
                    >
                      <input
                        className="css-pkbj54"
                        defaultValue=""
                        disabled={false}
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="email"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    className="css-1cky3ub-Columns"
                  >
                    <div
                      className="css-1oiyj7r-Column"
                    >
                      <div
                        className="css-jdxnts"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="css-13s2sfk-Heading"
                        >
                          password
                        </div>
                        <div
                          className="css-1rjy8ih"
                        >
                          <input
                            className="css-pkbj54"
                            defaultValue=""
                            disabled={false}
                            name="password"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="password"
                            type="password"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-1oiyj7r-Column"
                    >
                      <div
                        className="css-jdxnts"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="css-13s2sfk-Heading"
                        >
                          password_repeat
                        </div>
                        <div
                          className="css-1rjy8ih"
                        >
                          <input
                            className="css-pkbj54"
                            defaultValue=""
                            disabled={false}
                            name="password_repeat"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="password_repeat"
                            type="password"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-ukdqb3-Modal"
        >
          <button
            className="cancel-button css-a1i4d5-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-nkhhc8-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              loading
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;
